<resources>
    <string name="app_name">The Movies DB</string>

    <string name="upcoming_movies">Upcoming Movies</string>

    <string name="unauthorized">Incorrect e-mail or password.</string>
    <string name="internal_error">An internal error occurred.</string>
    <string name="unknown_error">Unknown error, contact your system administrator</string>
    <string name="no_internet_connection_error">No internet connection</string>

    <string name="movie_item_release_date">Release Date:</string>
    <string name="search_title">Search</string>

    <string name="movie_detail_title">Movie Details</string>
    <string name="movie_detail_release">Release</string>
    <string name="movie_detail_popularity">Popularity</string>
    <string name="movie_detail_runtime">Run Time</string>
    <string name="movie_detail_votes">%1$s Votes</string>
    <string name="movie_detail_minutes">%1$s Minutes</string>
    <string name="movie_detail_descriptions_movie_poster_photo">Movie Poster Photo</string>
    <string name="movie_detail_descriptions_movie_backdrop_photo">Movie Backdrop Photo</string>
    <string name="movie_detail_descriptions_movie_imdb_logo">Imdb Logo</string>
    <string name="invalid_date">Invalid Date</string>
    <string name="search">Search Movies</string>
    <string name="no_have_movies_in_the_moment">Nao ha filmes no momento</string>

</resources>
